<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/loginbg"
    >
     <Button
        android:id="@+id/skip"
        android:layout_width="100dp"
        android:layout_height="45dp"
        android:layout_marginTop="5dp"
        android:layout_alignParentRight="true"
        android:text="@string/skip"
        android:textColor="@color/white" />

    <LinearLayout
        android:id="@+id/lin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_marginLeft="35dp"
        android:layout_marginRight="35dp"
        android:orientation="vertical" >

        <EditText
            android:id="@+id/emailbox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/white"
            android:imeOptions="actionNext"
            android:singleLine="true" 
            android:inputType="textEmailAddress"
            android:hint="@string/youremail"
            />

        <EditText
            android:layout_marginTop="20dp"
            android:id="@+id/passwordbox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/white"
            android:imeOptions="actionDone"
            android:singleLine="true"  
            android:inputType="textPassword"
            android:hint="@string/password"/>
    </LinearLayout>

    <Button
        android:id="@+id/submit"
        android:layout_width="130dp"
        android:layout_height="45dp"
        android:layout_below="@+id/lin"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="30dp"
         android:background="@drawable/custom_rectangle"
        android:text="@string/login"
        android:textColor="@color/white" />

    
        <Button
        android:id="@+id/register"
        android:layout_width="130dp"
        android:layout_height="45dp"
        android:layout_below="@+id/submit"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="30dp"
         android:background="@drawable/custom_rectangle"
        android:text="@string/register"
        android:textColor="@color/white" />
        
       
    
</RelativeLayout>