<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <include
        android:id="@+id/include_header"
        layout="@layout/include_common_header" />

    <LinearLayout
        android:id="@+id/lin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/include_header"
        android:background="@color/header_background_color"
        android:orientation="vertical"
        android:paddingBottom="10dp"
        android:paddingLeft="20dp"
        android:paddingRight="20dp"
        android:paddingTop="10dp" >

        <LinearLayout
            android:id="@+id/lin1"
            android:layout_width="match_parent"
            android:layout_height="@dimen/option_height"
            android:orientation="horizontal" >

            <Button
                android:id="@+id/btn_rwa"
                android:layout_width="0dp"
                android:layout_height="@dimen/option_height"
                android:layout_weight="1"
                android:background="@color/rwacolor"
                android:text="@string/rwas"
                android:textColor="@color/white"
                android:textSize="@dimen/hometextsize" />

            <Button
                android:id="@+id/btn_groups"
                android:layout_width="0dp"
                android:layout_height="@dimen/option_height"
                android:layout_marginLeft="@dimen/option_margin"
                android:layout_weight="1"
                android:background="@color/groupcolor"
                android:text="@string/groups"
                android:textColor="@color/white"
                android:textSize="@dimen/hometextsize" />

            <Button
                android:id="@+id/btn_services"
                android:layout_width="0dp"
                android:layout_height="@dimen/option_height"
                android:layout_marginLeft="@dimen/option_margin"
                android:layout_weight="1"
                android:background="@color/servicecolor"
                android:text="@string/servvices"
                android:textColor="@color/white"
                android:textSize="@dimen/hometextsize" />

            <Button
                android:id="@+id/btn_booking"
                android:layout_width="0dp"
                android:layout_height="@dimen/option_height"
                android:layout_marginLeft="@dimen/option_margin"
                android:layout_weight="1"
                android:background="@color/bookingcolor"
                android:text="@string/bookings"
                android:textColor="@color/white"
                android:textSize="@dimen/hometextsize" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/lin2"
            android:layout_width="match_parent"
            android:layout_height="@dimen/option_height"
            android:layout_marginTop="@dimen/option_margin"
            android:orientation="horizontal" >

            <Button
                android:id="@+id/btn_noticeboard"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@color/noticecolor"
                android:text="@string/notice_board"
                android:textColor="@color/white"
                android:textSize="@dimen/hometextsize" />

            <Button
                android:id="@+id/btn_directory"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginLeft="@dimen/option_margin"
                android:layout_weight="1"
                android:background="@color/directorycolor"
                android:text="@string/directory"
                android:textColor="@color/white"
                android:textSize="@dimen/hometextsize" />

            <Button
                android:id="@+id/btn_spideypick"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginLeft="@dimen/option_margin"
                android:layout_weight="1"
                android:background="@color/spideycolor"
                android:text="@string/spidey_pick"
                android:textColor="@color/white"
                android:textSize="@dimen/hometextsize" />

            <Button
                android:id="@+id/btn_opinionpolls"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginLeft="@dimen/option_margin"
                android:layout_weight="1"
                android:background="@color/opinioncolor"
                android:text="@string/openion_polls"
                android:textColor="@color/white"
                android:textSize="@dimen/hometextsize" />
        </LinearLayout>
    </LinearLayout>

</RelativeLayout>